spot repairs to CSS z-index

--- a/html/LC_Code2_18.css
+++ b/html/LC_Code2_18.css
@@ -222,7 +222,7 @@ height:75px;
 float: right;
 line-height:75px;
 background-repeat: no-repeat;
-
+z-index: 3;
     
 }
 
