--- a/html/LC_Code2_5.css
+++ b/html/LC_Code2_5.css
@@ -208,7 +208,7 @@ height:75px;
 float: right;
 line-height:75px;
 background-repeat: no-repeat;
-
+z-index: 3;
     
 }
 
